--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -51,7 +51,7 @@
 
     <h1>!Todo Listo {{ data.name }}!</h1>
     <div>
-        <iframe src="https://www.youtube.com/embed/vk1KDVhIaxM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="560" height="315" [src]="video | domseguro:'https://www.youtube.com/embed/'" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
 
     <h4 class="m-4 strong">MEDIANTE EL SIGUIENTE LINK TE ATENDEREMOS EL DÍA {{ data.day }} DE {{ data.month }} A LAS {{ data.hour }} (BOGOTÁ, COLOMBIA)</h4>
