--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -114,7 +114,7 @@
         <div class="container">
             <h4 class="text-white py-2">SENSUM</h4>
             <p class="text-white">Fusión de ciencia y humanidad para prevenir la enfermedad</p>
-            <button class="btn btn-outline-secondary">Conoce más de nosotros</button>
+            <button class="btn btn-outline-light">Conoce más de nosotros</button>
         </div>
         <br>
     </div>
